Fixed home button in navbar, and overlapping content
Added global padding at top of all webpages in general.css

--- a/app/static/general.css
+++ b/app/static/general.css
@@ -25,5 +25,5 @@
 }
 
 body {
-    padding-top: 60px;
+    padding-top: 40px;
 }
